# rpc-tests

./: .gitignore  .golangci.yml  AUTHORS  CLAUDE.md  Makefile  README.md  block_by_number.py  empty_blocks.py  filter_changes.py  go.mod  go.sum  pyproject.toml  replay_request.py  replay_request.sh  replay_tx.py  replay_tx.sh  requirements.txt  subscriptions.py
.claude/: settings.json
.claude/hooks/: lint-after-build.sh
cmd/archive/: main.go
cmd/integration/: main.go
cmd/perf/: main.go
integration/: README.md  assesment-Reth-historycalApi.md  compress.sh  copy_results.py  decompress.sh  find_invalid_json.py  lint_response.py  run_all.sh  run_tests.py  test_tar.py
internal/archive/: archive.go  archive_test.go
internal/compare/: comparator.go  comparator_bench_test.go  comparator_test.go
internal/config/: config.go  config_test.go
internal/eth/: receipt.go  receipt_test.go
internal/filter/: filter.go  filter_bench_test.go  filter_test.go  lists.go
internal/jsondiff/: diff.go  diff_test.go
internal/perf/: config.go  hardware.go  perf_bench_test.go  perf_test.go  report.go  sequence.go  vegeta.go
internal/rpc/: client.go  client_bench_test.go  client_test.go  http.go  websocket.go  wsconn.go
internal/runner/: executor.go  report.go  runner.go  runner_bench_test.go  runner_test.go  stats.go
internal/testdata/: discovery.go  discovery_bench_test.go  discovery_test.go  loader.go  types.go
internal/tools/: block_by_number.go  empty_blocks.go  graphql.go  (+8 more)
perf/: README.md  run_perf_tests.py
scripts/: tag_archive.sh  tag_full.sh  tag_pruned.sh
(+3814 files in other folders)
