[project]
name = "rpc-tests"
version = "2.0.0-dev"

[project.scripts]
block_by_number = "rpc.block_by_number:main"
empty_blocks = "rpc.empty_blocks:main"
filter_changes = "rpc.filter_changes:main"
replay_request = "rpc.replay_request:main"
replay_tx = "rpc.replay_tx:main"
subscriptions = "rpc.subscriptions:main"